// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Title component will render correctly with subtitle 1`] = `
"<div class="flex-none h-30 pt-2 pb-7 font-title text-blue-950 dark:text-blue-200">
  <p class="text-6xl mb-3 capitalize">Test Title</p>
  <p class="text-2xl capitalize">Test Subtitle</p>
</div>"
`;

exports[`Page Title component will render correctly without subtitle 1`] = `
"<div class="flex-none h-30 pt-2 pb-7 font-title text-blue-950 dark:text-blue-200">
  <p class="text-6xl mb-3 capitalize">Test Title</p>
  <!--v-if-->
</div>"
`;
